OPIK-395 null responses failing test